# AlgoBot

./: .gitignore  Cargo.toml  devenv.nix
migrations/: 20250923133151_initial.sql
modal_macro/: Cargo.toml
modal_macro/src/: lib.rs  misc.rs
modal_macro/src/tags/: button.rs  closing.rs  embed.rs  input.rs  interactive.rs  mod.rs  modal.rs  modal_row.rs  option.rs  row.rs  selection.rs  tag.rs
modal_macro/src/tags/command/: command.rs  description.rs  mod.rs  name.rs  option.rs  type.rs
modal_macro/src/tags/interactive/: button.rs  embed.rs  input.rs  interactive.rs  mod.rs  option.rs  row.rs  (+2 more)
src/: aliases.rs  bot_command.rs  err.rs  error.rs  handler.rs  log.rs  main.rs  modal.rs  response.rs
src/calendar/: calendar.rs  calendar_macro.rs  event.rs  hub.rs  mod.rs  parser.rs
src/commands/: embed_test.rs  interactive_test.rs  misc.rs  mod.rs  modal_test.rs  ping.rs
src/commands/add_custom_event/: command.rs
src/commands/add_task/: command.rs  mod.rs
src/commands/events/: command.rs  embed.rs
src/commands/given_tasks/: command.rs  embed.rs  mod.rs
src/commands/my_tasks/: command.rs  embed.rs  mod.rs
src/commands/remind_events/: command.rs  embed.rs  mod.rs
src/commands/summaries/: command.rs  embed.rs  mod.rs
src/components/: command_ctx.rs  event_ctx.rs  interactive_message.rs  mod.rs  modal.rs  state.rs
src/database/: db.rs  db_things.rs  mod.rs
src/handler/: handler.rs  hourly.rs  mod.rs
src/traits/: bot_command.rs  interactable.rs  interactive_message.rs  into_embed.rs  into_message.rs  into_response.rs  mod.rs  modal.rs  state.rs
(+3 files in other folders)
